# WebUI

./: LIB-STRUCTURE.md  LICENSE  README.md  pyproject.toml
WebUI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
components/: __init__.py  button.py  input.py  navbar.py
core/: context.py  renderer.py
css/: __init__.py
dsl/: form.py  text.py
html/: __init__.py
routing/: __init__.py  router.py
server/: __init__.py  dev_server.py
state/: __init__.py  hooks.py
webui/: README.md  __init__.py  pyproject.toml
webui/cli/: main.py
webui/components/: card.py
webui/core/: __init__.py  element.py  parser.py
webui/dsl/: __init__.py  layout.py  media.py  misc.py
webui/js/: __init__.py
webui/routing/: page.py
webui/server/: hot_reload.py
webui/state/: state.py
webui/utils/: __init__.py  escape.py  helpers.py
