[project]
name = "WebUI"
version = "1.0"
description = "A Python library for creating webpages with HTML, CSS, and JavaScript using Python syntax."
authors = [
  { name = "ArnavG-Official", email = "arnavg2026@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.urls]
Homepage = "https://github.com/ArnavG-Official/WebUI"
