[project]
name = "WebUI"
version = "1.0"
description = "WebUI is a Python library that lets developers create webpages using clean Python syntax."
authors = [
  { name = "ArnavG-Official", email = "arnavg2026@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.urls]
Homepage = "https://github.com/ArnavG-Official/WebUI"
